2010-03-16  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>

        Revert r56006 as it caused functional issues. We will work on a
        testcase, and rework the fix, and land when we have this a bit
        more testable.

        * platform/gtk/RenderThemeGtk.cpp:
        (WebCore::RenderThemeGtk::paintMediaPlayButton):

2010-03-16  Pavel Feldman  <pfeldman@chromium.org>

        Reviewed by Timothy Hatcher.

        Web Inspector: Errors when inspecting styles of non-renderable elements in XHTML.

        https://bugs.webkit.org/show_bug.cgi?id=35025

        * inspector/InspectorDOMAgent.cpp:
        (WebCore::InspectorDOMAgent::getStyles):
        * inspector/front-end/DOMAgent.js:
        (WebInspector.DOMNode.prototype._addAttribute):
        (WebInspector.DOMWindow.prototype.Object):
        * inspector/front-end/MetricsSidebarPane.js:
        * inspector/front-end/StylesSidebarPane.js:
        (WebInspector.StylesSidebarPane.prototype.update.callback):
        (WebInspector.StylesSidebarPane.prototype.update):
        (WebInspector.StylesSidebarPane.prototype._update):

2010-03-12  Antonio Gomes  <tonikitoo@webkit.org>

        Reviewed by Simon Fraser.
        Patch by Antonio Gomes <tonikitoo@webkit.org>

        Spatial Navigation: Add a scrollIntoView call when focusing an element.
        https://bugs.webkit.org/show_bug.cgi?id=36020

        When focusing an element in Spatial Navigation logic, it is desired to make
        this element visible in the current viewport. For that to happen, there
        could be a call to Element's scrollIntoView method at focusing time. However
        for visual aspects, it is preferable to scroll to an inflated rect of |element|
        in order to consider the focus outline width.
        As Element's scrollIntoView method does not provide this flexibility, patch adds
        a custom scrollIntoView method to SpatialNavigation.h .

        * page/FocusController.cpp: